[tool.poetry]
name = "travel-map"
version = "0.1.0"
description = ""
authors = ["Charles Bine <charles.bine@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.29.0"
folium = "^0.14"
loguru = "^0.7.2"
pandas = "^2.1.3"
streamlit-folium = "^0.16.0"
tomli = "^2.0.1"
pydantic = "^2.5.2"
branca = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
